--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-form-builder2": "^0.20.3",
     "react-router-dom": "^7.7.1",
+    "survey-core": "^2.3.0",
+    "survey-creator-core": "^2.3.0",
+    "survey-creator-react": "^2.3.0",
+    "survey-react-ui": "^2.3.0",
     "tailwindcss": "^3.4.17",
     "vite-plugin-pwa": "^1.0.2",
     "zustand": "^5.0.6"
