--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.1.0",
     "react-form-builder2": "^0.20.3",
     "react-router-dom": "^7.7.1",
+    "react-transition-group": "^4.4.5",
     "survey-core": "^2.3.0",
     "survey-creator-core": "^2.3.0",
     "survey-creator-react": "^2.3.0",
@@ -33,6 +34,7 @@
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
     "vite": "^7.0.4"
